# osnova

./: .gitignore  .mcp.json  .mcp.md  AGENTS.md  CLAUDE.md  Cargo.toml  PHASE3_STATUS.md  README.md
.agents/queue/: CROSS_PLATFORM_PATHS.md  PHASE1_TASKS.md  PHASE2_TASKS.md  PHASE3_TASKS.md
.augment/rules/: specify-rules.md
.claude/agents/: backend-core.md  e2e-testing.md  frontend.md  integration.md  orchestrator.md  rust-testing.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
core/osnova_lib/: Cargo.toml
core/osnova_lib/src/: lib.rs
core/osnova_lib/src/cache/: manager.rs  mod.rs
core/osnova_lib/src/components/: downloader.rs  mod.rs
core/osnova_lib/src/crypto/: encryption.rs  key_derivation.rs
core/osnova_lib/src/manifest/: mod.rs  resolver.rs  schema.rs  validator.rs
core/osnova_lib/src/models/: application.rs  config_cache.rs  device_key.rs  identity.rs  key_cocoon.rs  pairing.rs
core/osnova_lib/src/network/: autonomi_client.rs  download.rs  mod.rs  upload.rs
core/osnova_lib/src/platform/: mod.rs  paths.rs
core/osnova_lib/src/services/: apps.rs  config.rs  identity.rs  keys.rs  launcher.rs  mod.rs  navigation.rs  status.rs  ui.rs
core/osnova_lib/src/storage/: file.rs  mod.rs  sql.rs
core/osnova_lib/tests/: e2e_component_fetch.rs
core/osnova_lib/tests/cache/: manager_test.rs  mod.rs
core/osnova_lib/tests/common/: mod.rs
core/osnova_lib/tests/components/: downloader_test.rs  mod.rs
core/osnova_lib/tests/manifest/: mod.rs  resolver_test.rs  validator_test.rs
core/osnova_lib/tests/network/: autonomi_client_test.rs  download_test.rs  mod.rs  upload_test.rs
docs/: README.md  plan.md  spec.md
docs/01-introduction/: README.md  overview.md  quick-start.md  user-experience.md
docs/02-architecture/: README.md  components.md  data-model-sql.md  data-model.md  modes.md  overview.md  platform-targets.md
docs/03-core-services/: README.md  osnova-core.md  osnova-saorsa.md  overview.md
docs/04-core-screens/: README.md  configuration.md  launcher.md  overview.md
docs/05-components/: README.md  backend-components.md  component-abi-impl.md  component-abi.md  external-component-abi.md  frontend-components.md  overview.md  packaging.md
docs/06-protocols/: README.md  autonomi-operations.md  manifest-schema.md  openrpc-contracts.md
docs/07-security/: README.md  component-access-control.md  encryption.md  identity.md  keys.md
docs/08-networking/: README.md  server-implementation.md
docs/09-ui-ux/: README.md  desktop-ui.md  mobile-ui.md
docs/10-development/: DOCUMENTATION_AUDIT.md  README.md  cross-platform-paths.md  dependency-updates-2025-10-07.md  e2e-testing-tauri-mcp.md  path-audit.md  research.md  tasks.md  testing.md
docs/11-apps/: README.md  app-deployment-app.md  configuration-app.md
scripts/orchestra/: test_button_clicks.js  test_dom_simple.js  test_install_app.js  test_navigation.js  test_tauri_mcp.js  verify_mcp.js
specs/001-use-the-docs/: backend-component.md  client-server-auth.md  cocoon-unlock.md  component-access-control.md  data-model.md  frontend-component.md  manifest-schema.md  onboarding-wireframes.md  openrpc-contracts.md  openrpc-conventions.md  pairing-e2e.md  plan.md  quickstart.md  research.md  server-ops.md  spec.md  storage-backend.md  (+3 more)
(+41 files in other folders)
