[workspace]
resolver = "2"
members = [
    "core/osnova_lib",
]
exclude = [
    "app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/osnova"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Compression
flate2 = "1.0"

# Testing
proptest = "1.5"
